--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,26 @@ card-width{
 h1{
   font-weight: bold;
 }
+@media only screen and (max-width: 600px) {
+  h2{
+    font-size: 10px;
+  }
+  p{
+    font-size: 10px;
+  }
+  .lineheight{
+    line-height: 5px;
+  }
+  .lineheight2{
+    line-height: 2px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  h2{
+    font-size: 18px;
+    font-weight: 600;
+  }
+  p{
+    font-size: 10px;
+  }
+}
