--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,13 @@
-<div class="container space">
+
   
     <h1>Who's getting Tidal?</h1>
+    <div class="container space">
     <ul class="row">
       <li class="col-sm-6" *ngFor="let card of cards">
-        <blade class="h-50 d-inline-block" [customerDetails]="card"></blade>
+        <blade [customerDetails]="card"></blade>
       </li>
     </ul>
+    </div>
     
       
  
@@ -15,5 +17,3 @@
 
 
   <div style="height:100px;width:100%" ></div>
-
-</div>
