--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 /* Add application styles & imports to this file! */
 img{
   margin: auto;
-  width: 100px;
-  height: 100px;
+  /* width: 50px;
+  height: 50px; */
 }
 .lineheight{
   line-height: 10px;
@@ -22,6 +22,9 @@ card-width{
 }
 h1{
   font-weight: bold;
+}
+.card{
+  min-height: 150px;
 }
 @media only screen and (max-width: 600px) {
   h2{
