--- a/app/app.component.html
+++ b/app/app.component.html
@@ -8,7 +8,18 @@
         </li>
       </ul>
     </div>
-    
+    <form class="form-group">
+      <label for="firstname">First Name</label>
+      <input required maxlength=10 minlength=3 pattern="banana" ngModel name="firstName" #firstName="ngModel" id="firstname" class="form-control" (change)="log(firstName.errors)" type="text">
+      <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">
+        <div *ngIf="firstName.errors.required">Enter the valid First Name</div>
+        <div *ngIf="firstName.errors.minlength">Min length not met</div>
+        <div *ngIf="firstName.errors.pattern">Entered text is not a valid text</div>
+      </div>
+
+    </form>
+
+
       
  
     
