--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ li{
 }
 h1{
   font-weight: bold;
+  margin: 10px;
+  padding: 10px;
 }
 h2{
   font-size: 20px;
@@ -29,7 +31,7 @@ h2{
 }
 @media only screen and (max-width: 600px) {
  h2{
-   font-size: 18px;
+   font-size: 16px;
     font-weight: bold;
  }
  p{
@@ -41,10 +43,14 @@ h2{
  .lineheight2{
    line-height: 4px;
  }
+ .card{
+   max-width: 400px;
+ }
+ 
 }
 @media only screen and (max-width: 800px) {
  h2{
-   font-size: 18px;
+   font-size: 16px;
     font-weight: bold;
  }
  p{
